test_src/compiler_errors/types/binary/OrFloatError2.b
class OrFloatError2 {
    void test() {
        println(42 | 14.0);
    }
}
